@@ -28,7 +28,6 @@ import java.io.StringWriter;
 import java.io.Writer;
 import java.net.HttpURLConnection;
 import java.net.InetAddress;
-import java.net.MalformedURLException;
 import java.net.SocketException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
@@ -42,9 +41,9 @@ import java.util.zip.GZIPInputStream;
 
 final class PeerImpl implements Peer {
 
+    private final String host;
     private final PeerWebSocket webSocket;
     private boolean useWebSocket;
-    private final String peerAddress;
     private volatile String announcedAddress;
     private volatile int port;
     private volatile boolean shareAddress;
@@ -64,12 +63,12 @@ final class PeerImpl implements Peer {
     private volatile long hallmarkBalance = -1;
     private volatile int hallmarkBalanceHeight;
 
-    PeerImpl(String peerAddress, String announcedAddress) {
-        this.peerAddress = peerAddress;
+    PeerImpl(String host, String announcedAddress) {
+        this.host = host;
         this.announcedAddress = announcedAddress;
         try {
-            this.port = new URL("http://" + announcedAddress).getPort();
-        } catch (MalformedURLException ignore) {}
+            this.port = new URI("http://" + announcedAddress).getPort();
+        } catch (URISyntaxException ignore) {}
         this.state = State.NON_CONNECTED;
         this.shareAddress = true;
         this.webSocket = new PeerWebSocket();
@@ -77,8 +76,8 @@ final class PeerImpl implements Peer {
     }
 
     @Override
-    public String getPeerAddress() {
-        return peerAddress;
+    public String getHost() {
+        return host;
     }
 
     @Override
@@ -160,7 +159,7 @@ final class PeerImpl implements Peer {
                 }
             }
             if (isOldVersion) {
-                Logger.logDebugMessage(String.format("Blacklisting %s version %s", peerAddress, version));
+                Logger.logDebugMessage(String.format("Blacklisting %s version %s", host, version));
                 blacklistingCause = "Old version: " + version;
                 setState(State.NON_CONNECTED);
                 Peers.notifyListeners(this, Peers.Event.BLACKLIST);
@@ -208,17 +207,21 @@ final class PeerImpl implements Peer {
     }
 
     void setAnnouncedAddress(String announcedAddress) {
-        String announcedPeerAddress = Peers.normalizeHostAndPort(announcedAddress);
-        if (announcedPeerAddress != null) {
-            this.announcedAddress = announcedPeerAddress;
+        this.announcedAddress = announcedAddress;
+        if (announcedAddress != null) {
             try {
-                this.port = new URL("http://" + announcedPeerAddress).getPort();
-            } catch (MalformedURLException ignore) {}
+                this.port = new URI("http://" + announcedAddress).getPort();
+            } catch (URISyntaxException e) {
+                this.port = -1;
+            }
+        } else {
+            this.port = -1;
         }
     }
 
-    int getPort() {
-        return port;
+    @Override
+    public int getPort() {
+        return port <= 0 ? Peers.getDefaultPeerPort() : port;
     }
 
     @Override
@@ -242,7 +245,8 @@ final class PeerImpl implements Peer {
 
     @Override
     public boolean isBlacklisted() {
-        return blacklistingTime > 0 || isOldVersion || Peers.knownBlacklistedPeers.contains(peerAddress);
+        return blacklistingTime > 0 || isOldVersion || Peers.knownBlacklistedPeers.contains(host)
+                || (announcedAddress != null && Peers.knownBlacklistedPeers.contains(announcedAddress));
     }
 
     @Override
@@ -258,9 +262,9 @@ final class PeerImpl implements Peer {
         }
         if (! isBlacklisted()) {
             if (cause instanceof IOException || cause instanceof ParseException) {
-                Logger.logDebugMessage("Blacklisting " + peerAddress + " because of: " + cause.toString());
+                Logger.logDebugMessage("Blacklisting " + host + " because of: " + cause.toString());
             } else {
-                Logger.logDebugMessage("Blacklisting " + peerAddress + " because of: " + cause.toString(), cause);
+                Logger.logDebugMessage("Blacklisting " + host + " because of: " + cause.toString(), cause);
             }
         }
         blacklist(cause.toString() == null ? cause.getClass().getName() : cause.toString());
@@ -276,7 +280,10 @@ final class PeerImpl implements Peer {
 
     @Override
     public void unBlacklist() {
-        Logger.logDebugMessage("Unblacklisting " + peerAddress);
+        if (blacklistingTime == 0 ) {
+            return;
+        }
+        Logger.logDebugMessage("Unblacklisting " + host);
         setState(State.NON_CONNECTED);
         blacklistingTime = 0;
         blacklistingCause = null;
@@ -335,22 +342,13 @@ final class PeerImpl implements Peer {
         boolean showLog = false;
         HttpURLConnection connection = null;
         int communicationLoggingMask = Peers.communicationLoggingMask;
-        String address = announcedAddress != null ? announcedAddress : peerAddress;
 
         try {
             //
             // Create a new WebSocket session if we don't have one
             //
-            if (useWebSocket && (webSocket.getSession() == null || !webSocket.getSession().isOpen())) {
-                if (announcedAddress != null && !verifyAnnouncedAddress(announcedAddress))
-                    return null;
-                StringBuilder buf = new StringBuilder("ws://");
-                buf.append(peerAddress);
-                if (port <= 0)
-                    buf.append(':').append(Peers.getDefaultPeerPort());
-                buf.append("/nxt");
-                useWebSocket = webSocket.startClient(URI.create(buf.toString()));
-            }
+            if (useWebSocket && (webSocket.getSession() == null || !webSocket.getSession().isOpen()))
+                useWebSocket = webSocket.startClient(URI.create("ws://" + host + ":" + getPort() + "/nxt"));
             //
             // Send the request and process the response
             //
@@ -362,7 +360,7 @@ final class PeerImpl implements Peer {
                 request.writeJSONString(wsWriter);
                 String wsRequest = wsWriter.toString();
                 if (communicationLoggingMask != 0)
-                    log = "WebSocket " + address + ": " + wsRequest;
+                    log = "WebSocket " + host + ": " + wsRequest;
                 String wsResponse = webSocket.doPost(wsRequest);
                 updateUploadedVolume(wsRequest.length());
                 if (maxResponseSize > 0) {
@@ -379,14 +377,7 @@ final class PeerImpl implements Peer {
                 //
                 // Send the request using HTTP
                 //
-                if (announcedAddress != null && !verifyAnnouncedAddress(announcedAddress))
-                    return null;
-                StringBuilder buf = new StringBuilder("http://");
-                buf.append(peerAddress);
-                if (port <= 0)
-                    buf.append(':').append(Peers.getDefaultPeerPort());
-                buf.append("/nxt");
-                URL url = new URL(buf.toString());
+                URL url = new URL("http://" + host + ":" + getPort() + "/nxt");
                 if (communicationLoggingMask != 0)
                     log = "\"" + url.toString() + "\": " + JSON.toString(request);
                 connection = (HttpURLConnection) url.openConnection();
@@ -438,7 +429,7 @@ final class PeerImpl implements Peer {
                         log += " >>> Peer responded with HTTP " + connection.getResponseCode() + " code!";
                         showLog = true;
                     }
-                    Logger.logDebugMessage("Peer " + peerAddress + " responded with HTTP " + connection.getResponseCode());
+                    Logger.logDebugMessage("Peer " + host + " responded with HTTP " + connection.getResponseCode());
                     deactivate();
                     connection.disconnect();
                 }
@@ -447,8 +438,9 @@ final class PeerImpl implements Peer {
             // Check for an error response
             //
             if (response != null && response.get("error") != null) {
-                Logger.logDebugMessage(String.format("Peer %s Version %s returned error %s",
-                                       address, version, response.toJSONString()));
+                Logger.logDebugMessage("Peer " + host + " version " + version + " returned error: " +
+                                       response.toJSONString() + ", request was: " + JSON.toString(request) +
+                                       ", diconnecting");
                 deactivate();
                 if (connection != null)
                     connection.disconnect();
@@ -461,8 +453,8 @@ final class PeerImpl implements Peer {
             if (state == State.CONNECTED ||
                     !(e instanceof UnknownHostException || e instanceof SocketTimeoutException ||
                                         e instanceof SocketException || Errors.END_OF_FILE.equals(e.getMessage()))) {
-                Logger.logDebugMessage(String.format("Error sending JSON request to %s: %s",
-                                        address, e.getMessage()!=null ? e.getMessage() : e.toString()));
+                Logger.logDebugMessage(String.format("Error sending request to peer %s: %s",
+                                       host, e.getMessage()!=null ? e.getMessage() : e.toString()));
             }
             if ((communicationLoggingMask & Peers.LOGGING_MASK_EXCEPTIONS) != 0) {
                 log += " >>> " + e.toString();
@@ -485,46 +477,82 @@ final class PeerImpl implements Peer {
         } else if (getWeight() < o.getWeight()) {
             return 1;
         }
-        return getPeerAddress().compareTo(o.getPeerAddress());
+        return getHost().compareTo(o.getHost());
     }
 
     void connect() {
         lastConnectAttempt = Nxt.getEpochTime();
+        if (!Peers.ignorePeerAnnouncedAddress && announcedAddress != null) {
+            try {
+                URI uri = new URI("http://" + announcedAddress);
+                InetAddress inetAddress = InetAddress.getByName(uri.getHost());
+                if (!inetAddress.equals(InetAddress.getByName(host))) {
+                    Logger.logDebugMessage("Announced address " + announcedAddress + " now points to " + inetAddress.getHostAddress() + ", replacing peer " + host);
+                    Peers.removePeer(this);
+                    PeerImpl newPeer = Peers.findOrCreatePeer(inetAddress, announcedAddress, true);
+                    if (newPeer != null) {
+                        Peers.addPeer(newPeer);
+                        newPeer.connect();
+                    }
+                    return;
+                }
+            } catch (URISyntaxException | UnknownHostException e) {
+                blacklist(e);
+                return;
+            }
+        }
         JSONObject response = send(Peers.myPeerInfoRequest);
         if (response != null && (application = (String)response.get("application")) != null) {
+            lastUpdated = lastConnectAttempt;
             setVersion((String) response.get("version"));
             platform = (String)response.get("platform");
             shareAddress = Boolean.TRUE.equals(response.get("shareAddress"));
+            analyzeHallmark((String) response.get("hallmark"));
 
             if (!Peers.ignorePeerAnnouncedAddress) {
                 String newAnnouncedAddress = Convert.emptyToNull((String) response.get("announcedAddress"));
                 if (newAnnouncedAddress != null) {
-                    newAnnouncedAddress = Peers.addressWithPort(newAnnouncedAddress);
-                    if (newAnnouncedAddress != null && !newAnnouncedAddress.equals(announcedAddress)) {
+                    newAnnouncedAddress = Peers.addressWithPort(newAnnouncedAddress.toLowerCase());
+                    if (newAnnouncedAddress != null) {
                         if (!verifyAnnouncedAddress(newAnnouncedAddress)) {
+                            Logger.logDebugMessage("Connect: new announced address for " + host + " not accepted");
+                            if (!verifyAnnouncedAddress(announcedAddress)) {
+                                Logger.logDebugMessage("Connect: old announced address for " + host + " no longer valid");
+                                Peers.setAnnouncedAddress(this, host);
+                            }
+                            setState(State.NON_CONNECTED);
                             return;
                         }
-                        // force checking connectivity to new announced address
-                        Logger.logDebugMessage("Peer " + peerAddress + " has new announced address " + newAnnouncedAddress + ", old is " + announcedAddress);
-                        setState(Peer.State.NON_CONNECTED);
-                        setAnnouncedAddress(newAnnouncedAddress);
-                        return;
+                        if (!newAnnouncedAddress.equals(announcedAddress)) {
+                            Logger.logDebugMessage("Connect: peer " + host + " has new announced address " + newAnnouncedAddress + ", old is " + announcedAddress);
+                            int oldPort = getPort();
+                            Peers.setAnnouncedAddress(this, newAnnouncedAddress);
+                            if (getPort() != oldPort) {
+                                // force checking connectivity to new announced port
+                                setState(State.NON_CONNECTED);
+                                return;
+                            }
+                        }
                     }
+                } else {
+                    Peers.setAnnouncedAddress(this, host);
                 }
             }
 
             if (announcedAddress == null) {
-                setAnnouncedAddress(peerAddress);
-                //Logger.logDebugMessage("Connected to peer without announced address, setting to " + peerAddress);
+                if (hallmark == null || hallmark.getPort() == Peers.getDefaultPeerPort()) {
+                    Peers.setAnnouncedAddress(this, host);
+                    Logger.logDebugMessage("Connected to peer without announced address, setting to " + host);
+                } else {
+                    setState(State.NON_CONNECTED);
+                    return;
+                }
             }
-            analyzeHallmark(announcedAddress, (String) response.get("hallmark"));
             if (!isOldVersion) {
                 setState(State.CONNECTED);
-                Peers.addOrUpdate(this);
             } else if (!isBlacklisted()) {
                 blacklist("Old version: " + version);
             }
-            lastUpdated = lastConnectAttempt;
         } else {
             //Logger.logDebugMessage("Failed to connect to peer " + peerAddress);
             setState(State.NON_CONNECTED);
@@ -532,15 +560,23 @@ final class PeerImpl implements Peer {
     }
 
     boolean verifyAnnouncedAddress(String newAnnouncedAddress) {
+        if (newAnnouncedAddress == null) {
+            return true;
+        }
         try {
-            InetAddress address = InetAddress.getByName(new URI("http://" + peerAddress).getHost());
-            for (InetAddress inetAddress : InetAddress.getAllByName(new URI("http://" + newAnnouncedAddress).getHost())) {
+            URI uri = new URI("http://" + newAnnouncedAddress);
+            int announcedPort = uri.getPort() == -1 ? Peers.getDefaultPeerPort() : uri.getPort();
+            if (hallmark != null && announcedPort != hallmark.getPort()) {
+                Logger.logDebugMessage("Announced port " + announcedPort + " does not match hallmark " + hallmark.getPort() + ", ignoring hallmark for " + host);
+                hallmark = null;
+            }
+            InetAddress address = InetAddress.getByName(host);
+            for (InetAddress inetAddress : InetAddress.getAllByName(uri.getHost())) {
                 if (inetAddress.equals(address)) {
                     return true;
                 }
             }
-            Logger.logDebugMessage("Peer announced address " + newAnnouncedAddress + " does not resolve to " + peerAddress + ", removing");
-            remove();
+            Logger.logDebugMessage("Announced address " + newAnnouncedAddress + " does not resolve to " + host);
         } catch (UnknownHostException|URISyntaxException e) {
             Logger.logDebugMessage(e.toString());
             blacklist(e);
@@ -548,7 +584,7 @@ final class PeerImpl implements Peer {
         return false;
     }
 
-    boolean analyzeHallmark(String address, final String hallmarkString) {
+    boolean analyzeHallmark(final String hallmarkString) {
 
         if (hallmarkString == null && this.hallmark == null) {
             return true;
@@ -564,8 +600,6 @@ final class PeerImpl implements Peer {
         }
 
         try {
-            URI uri = new URI("http://" + address.trim());
-            String host = uri.getHost();
 
             Hallmark hallmark = Hallmark.parseHallmark(hallmarkString);
             if (!hallmark.isValid()) {
@@ -574,16 +608,12 @@ final class PeerImpl implements Peer {
                 return false;
             }
             if (!hallmark.getHost().equals(host)) {
-                InetAddress[] hosts = InetAddress.getAllByName(host);
-                InetAddress[] hallmarks =
-                        InetAddress.getAllByName(hallmark.getHost());
+                InetAddress hostAddress = InetAddress.getByName(host);
                 boolean validHost = false;
-                hostLoop: for (InetAddress nextHost : hosts) {
-                    for (InetAddress nextHallmark : hallmarks) {
-                        if (nextHost.equals(nextHallmark)) {
-                            validHost = true;
-                            break hostLoop;
-                        }
+                for (InetAddress nextHallmark : InetAddress.getAllByName(hallmark.getHost())) {
+                    if (hostAddress.equals(nextHallmark)) {
+                        validHost = true;
+                        break;
                     }
                 }
                 if (!validHost) {
@@ -620,8 +650,8 @@ final class PeerImpl implements Peer {
             return true;
 
         } catch (UnknownHostException ignore) {
-        } catch (URISyntaxException | RuntimeException e) {
-            Logger.logDebugMessage("Failed to analyze hallmark for peer " + address + ", " + e.toString(), e);
+        } catch (RuntimeException e) {
+            Logger.logDebugMessage("Failed to analyze hallmark for peer " + host + ", " + e.toString(), e);
         }
         this.hallmark = null;
         return false;
